inserted caption for fig 4

--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -725,6 +725,24 @@
   file = {C\:\\Users\\Me\\Zotero\\storage\\NZSKHWPY\\Bennett et al. - 2021 - Resistance of African tropical forests to an extre.pdf}
 }
 
+@article{bennettThermalOptimaGross2021,
+  title = {Thermal Optima of Gross Primary Productivity Are Closely Aligned with Mean Air Temperatures across {{Australian}} Wooded Ecosystems},
+  author = {Bennett, Alison C. and Arndt, Stefan K. and Bennett, Lauren T. and Knauer, Jürgen and Beringer, Jason and Griebel, Anne and Hinko-Najera, Nina and Liddell, Michael J. and Metzen, Daniel and Pendall, Elise and Silberstein, Richard P. and Wardlaw, Timothy J. and Woodgate, William and Haverd, Vanessa},
+  date = {2021},
+  journaltitle = {Global Change Biology},
+  volume = {n/a},
+  number = {n/a},
+  issn = {1365-2486},
+  doi = {10.1111/gcb.15760},
+  url = {http://onlinelibrary.wiley.com/doi/abs/10.1111/gcb.15760},
+  urldate = {2021-08-09},
+  abstract = {Gross primary productivity (GPP) of wooded ecosystems (forests and savannas) is central to the global carbon cycle, comprising 67\%–75\% of total global terrestrial GPP. Climate change may alter this flux by increasing the frequency of temperatures beyond the thermal optimum of GPP (Topt). We examined the relationship between GPP and air temperature (Ta) in 17 wooded ecosystems dominated by a single plant functional type (broadleaf evergreen trees) occurring over a broad climatic gradient encompassing five ecoregions across Australia ranging from tropical in the north to Mediterranean and temperate in the south. We applied a novel boundary-line analysis to eddy covariance flux observations to (a) derive ecosystem GPP–Ta relationships and Topt (including seasonal analyses for five tropical savannas); (b) quantitatively and qualitatively assess GPP–Ta relationships within and among ecoregions; (c) examine the relationship between Topt and mean daytime air temperature (MDTa) across all ecosystems; and (d) examine how down-welling short-wave radiation (Fsd) and vapour pressure deficit (VPD) influence the GPP–Ta relationship. GPP–Ta relationships were convex parabolas with narrow curves in tropical forests, tropical savannas (wet season), and temperate forests, and wider curves in temperate woodlands, Mediterranean woodlands, and tropical savannas (dry season). Ecosystem Topt ranged from 15℃ (temperate forest) to 32℃ (tropical savanna—wet and dry seasons). The shape of GPP–Ta curves was largely determined by daytime Ta range, MDTa, and maximum GPP with the upslope influenced by Fsd and the downslope influenced by VPD. Across all ecosystems, there was a strong positive linear relationship between Topt and MDTa (Adjusted R2: 0.81; Slope: 1.08) with Topt exceeding MDTa by {$>$}1℃ at all but two sites. We conclude that ecosystem GPP has adjusted to local MDTa within Australian broadleaf evergreen forests and that GPP is buffered against small Ta increases in the majority of these ecosystems.},
+  langid = {english},
+  keywords = {air temperature,broadleaved evergreen tree,climate change,Eddy covariance,forest,gross primary production,savanna,thermal optima},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/gcb.15760},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\UCICCZAJ\\Bennett et al. - Thermal optima of gross primary productivity are c.pdf;C\:\\Users\\Me\\Zotero\\storage\\Z8S5WBRZ\\gcb.html}
+}
+
 @article{bertrandChangesPlantCommunity2011,
   title = {Changes in Plant Community Composition Lag behind Climate Warming in Lowland Forests},
   author = {Bertrand, Romain and Lenoir, Jonathan and Piedallu, Christian and Riofrío-Dillon, Gabriela and de Ruffray, Patrice and Vidal, Claude and Pierrat, Jean-Claude and Gégout, Jean-Claude},
@@ -3050,6 +3068,26 @@
   abstract = {One-year-old olive trees (cv. Koroneiki) were grown in plastic containers of 50 000 cm3 under full daylight and 30, 60, and 90 \% shade for two years. The effects of shade on leaf morphology and anatomy, including stomatal density and chloroplast structure, net photosynthetic rate (P N), stomatal conductance (g s), and fruit yield were studied. Shade reduced leaf thickness due to the presence of only 1–2 palisade layers and reduced the length of palisade cells and spongy parenchyma. The number of thylakoids in grana as well as in stroma increased as shade increased, while the number of plastoglobuli decreased in proportion to the reduced photosynthetically active radiation (PAR). The higher the level of shade, the lower the stomatal and trichome density, leaf mass per area (ALM), g s, and P N. Shade of 30, 60, and 90 \% reduced stomatal density by 7, 16, and 27 \%, respectively, while the corresponding reduction in P N was 21, 35, and 67 \%. In contrast, chlorophyll a+b per fresh mass, and leaf width, length, and particularly area increased under the same shade levels (by 16, 33, and 81 \% in leaf area). P N reduction was due both to a decrease in PAR and to the morphological changes in leaves. The effect of shade was more severe on fruit yield per tree (32, 67, and 84 \%) than on P N indicating an effect on bud differentiation and fruit set. The olive tree adapts well to shade compared with other fruit trees by a small reduction in stomatal and trichome density, palisade parenchyma, and a significant increase in leaf area.}
 }
 
+@article{greiserHidingClimateCharacterizing2019,
+  title = {Hiding from the Climate: {{Characterizing}} Microrefugia for Boreal Forest Understory Species},
+  shorttitle = {Hiding from the Climate},
+  author = {Greiser, Caroline and Ehrlén, Johan and Meineri, Eric and Hylander, Kristoffer},
+  date = {2019},
+  journaltitle = {Global Change Biology},
+  volume = {26},
+  number = {2},
+  pages = {471--483},
+  issn = {1365-2486},
+  doi = {10.1111/gcb.14874},
+  url = {http://onlinelibrary.wiley.com/doi/abs/10.1111/gcb.14874},
+  urldate = {2021-08-09},
+  abstract = {Climate warming is likely to shift the range margins of species poleward, but fine-scale temperature differences near the ground (microclimates) may modify these range shifts. For example, cold-adapted species may survive in microrefugia when the climate gets warmer. However, it is still largely unknown to what extent cold microclimates govern the local persistence of populations at their warm range margin. We located 99 microrefugia, defined as sites with edge populations of 12 widespread boreal forest understory species (vascular plants, mosses, liverworts and lichens) in an area of ca. 24,000 km2 along the species' southern range margin in central Sweden. Within each population, a logger measured temperature eight times per day during one full year. Using univariate and multivariate analyses, we examined the differences of the populations' microclimates with the mean and range of microclimates in the landscape, and identified the typical climate, vegetation and topographic features of these habitats. Comparison sites were drawn from another logger data set (n = 110), and from high-resolution microclimate maps. The microrefugia were mainly places characterized by lower summer and autumn maximum temperatures, late snow melt dates and high climate stability. Microrefugia also had higher forest basal area and lower solar radiation in spring and autumn than the landscape average. Although there were common trends across northern species in how microrefugia differed from the landscape average, there were also interspecific differences and some species contributed more than others to the overall results. Our findings provide biologically meaningful criteria to locate and spatially predict potential climate microrefugia in the boreal forest. This opens up the opportunity to protect valuable sites, and adapt forest management, for example, by keeping old-growth forests at topographically shaded sites. These measures may help to mitigate the loss of genetic and species diversity caused by rear-edge contractions in a warmer climate.},
+  langid = {english},
+  keywords = {cold-adapted species,marginal populations,microclimate,range contraction,range edge,range shift,rear edge,thermal niche},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/gcb.14874},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\HLDSEEHV\\Greiser et al. - 2020 - Hiding from the climate Characterizing microrefug.pdf;C\:\\Users\\Me\\Zotero\\storage\\BGMQT9JV\\gcb.html}
+}
+
 @article{griffinCanopyPositionAffects2002,
   title = {Canopy Position Affects the Temperature Response of Leaf Respiration in {{Populus}} Deltoides},
   author = {Griffin, Kevin L. and Turnbull, Matthew and Murthy, Ramesh},
@@ -3474,6 +3512,26 @@
   urldate = {2021-07-04},
   abstract = {Moderately elevated temperatures induce a rapid increase in the heat and light resistance of photosystem II (PSII) in higher-plant leaves. This phenomenon was studied in intact potato leaves exposed to 35 °C for 2 h, using chlorophyll fluorometry, kinetic and difference spectrophotometry and photoacoustics. The 35 °C treatment was observed to cause energetic uncoupling between carotenoids and chlorophylls: (i) the steady-state chlorophyll fluorescence emission excited by a blue light beam (490 nm) was noticeably reduced as compared to fluorescence elicited by orange light (590 nm) and (ii) the quantum yield for photosynthetic oxygen evolution in blue light (400–500 nm) was preferentially reduced relative to the quantum yield measured in red light (590–710 nm). Analysis of the chlorophyll-fluorescence and light-absorption characteristics of the heated leaves showed numerous analogies with the fluorescence and absorption changes associated with the light-induced xanthophyll cycle activity, indicating that the carotenoid species involved in the heat-induced pigment uncoupling could be the xanthophyll violaxanthin. More precisely, the 35 °C treatment was observed to accelerate and amplify the non-photochemical quenching of chlorophyll fluorescence (in both moderate red light and strong white light) and to cause an increase in leaf absorbance in the blue-green spectral region near 520 nm, as do strong light treatments which induce the massive conversion of violaxanthin to zeaxanthin. Interestingly, short exposure of potato leaves to strong light also provoked a significant increase in the stability of PSII to heat stress. It was also observed that photosynthetic electron transport was considerably more inhibited by chilling temperatures in 35 °C-treated leaves than in untreated leaves. Further, pre-exposure of potato leaves to 35 °C markedly increased the amplitude and the rate of light-induced changes in leaf absorbance at 505 nm (indicative of xanthophyll cycle activity), suggesting the possibility that moderately elevated temperature increased the accessibility of violaxanthin to the membrane-located de-epoxidase. This was supported by the quantitative analysis of the xanthophyll-cycle pigments before and after the 35 °C treatment, showing light-independent accumulation of zeaxanthin during mild heat stress. Based on these results, we propose that the rapid adjustment of the heat resistance of PSII may involve a modification of the interaction between violaxanthin and the light-harvesting complexes of PSII. As a consequence, the thermoresistance of PSII could be enhanced either directly through a conformational change of PSII or indirectly via a carotenoid-dependent modulation of membrane lipid fluidity.},
   langid = {english}
+}
+
+@article{heChangesShadowShifting2018,
+  title = {Changes in the {{Shadow}}: {{The Shifting Role}} of {{Shaded Leaves}} in {{Global Carbon}} and {{Water Cycles Under Climate Change}}},
+  shorttitle = {Changes in the {{Shadow}}},
+  author = {He, Liming and Chen, Jing M. and Gonsamo, Alemu and Luo, Xiangzhong and Wang, Rong and Liu, Yang and Liu, Ronggao},
+  date = {2018},
+  journaltitle = {Geophysical Research Letters},
+  volume = {45},
+  number = {10},
+  pages = {5052--5061},
+  issn = {1944-8007},
+  doi = {10.1029/2018GL077560},
+  url = {http://agupubs.onlinelibrary.wiley.com/doi/abs/10.1029/2018GL077560},
+  urldate = {2021-08-09},
+  abstract = {Globally shaded leaves contribute to more than a half of the total increase in gross primary production (GPP; 7.6 Pg C) for 1982–2016. During 1982–2016, the fraction of shaded GPP increases by 1.1\% (p {$<$} 0.01) in tropical forests and decreases by 1.4\% (p {$<$} 0.01) and 1.8\% (p {$<$} 0.01) in evergreen needleleaf and deciduous needleleaf boreal forests, respectively, suggesting an ecological niche of certain canopy structure for ecosystems to achieve maximum GPP. Unlike transpiration from sunlit leaves that has a turning point in the trend in 2003, global transpiration from shaded leaves steadily increased at the rate of 34 km3/year (p {$<$} 0.0001) during 1982–2016. Our study therefore suggests that shaded leaves have an increasing role in buffering the adverse impact of climate change and extremes. Further studies are still needed to reduce the uncertainties in reported trends arisen from climate forcing data, leaf area index, and land cover and land change products.},
+  langid = {english},
+  keywords = {carbon cycle,climate change,evapotranspiration,global warming,shaded leaves,trend},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1029/2018GL077560},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\JJPP7RST\\He et al. - 2018 - Changes in the Shadow The Shifting Role of Shaded.pdf}
 }
 
 @article{hernandezSimilarTemperatureDependence2020,
@@ -6116,6 +6174,18 @@
   keywords = {biogeochemical dynamics,ecosystem dynamics,ecosystem model,individual-based model,moment approximation,plant community dynamics,scaling,size- and age-structured,South America,sub-grid scale heterogeneity,terrestrial,terrestrial biosphere model,vegetation dynamics},
   annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1890/0012-9615\%282001\%29071\%5B0557\%3AAMFSVD\%5D2.0.CO\%3B2},
   file = {C\:\\Users\\Me\\Zotero\\storage\\F7GKKW8W\\Moorcroft et al. - 2001 - A Method for Scaling Vegetation Dynamics The Ecos.pdf;C\:\\Users\\Me\\Zotero\\storage\\659LSGXK\\0012-9615(2001)071[0557AMFSVD]2.0.html}
+}
+
+@article{mooreUpscalingTranspirationDiverse2018,
+  title = {Upscaling {{Transpiration}} in {{Diverse Forests}}: {{Insights}} from a {{Tropical Premontane Site}}},
+  shorttitle = {Upscaling {{Transpiration}} in {{Diverse Forests}}},
+  author = {Moore, Georgianne and Orozco, Graciela and Aparecido, Luiza and Miller, Gretchen},
+  date = {2018},
+  journaltitle = {Ecohydrology},
+  volume = {11},
+  pages = {e1920},
+  doi = {10.1002/eco.1920},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\M2FTMCKN\\upscaling-transpiration-diverse-forests-insights-tropical-premontane-site.html}
 }
 
 @article{muir_tealeaves_2019,
