--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -106,7 +106,7 @@ Rising temperatures are profoundly influencing forests on many scales with poten
 
 **Forest responses and feedbacks to climate change will have a critical influence on the future of Earth's climate.**
 Globally, temperatures have risen $1.2^\circ$C since 1900 [@rohdeBerkeleyEarthLand2020] and are expected to rise a $1.6 - 4.3^{\circ}$C above pre-industrial levels by 2100 (IPCC 2014), accompanied by increasing severity and frequency of heat waves [@meehlMoreIntenseMore2004] and hotter droughts [@trenberthGlobalWarmingChanges2014b].
-These changes are expected to have profound effects on tree metabolism and forest ecosystem function [@breshearsUnderappreciatedPlantVulnerabilities2021; IPBES report], including altered rates of photosynthesis and respiration [@breshearsUnderappreciatedPlantVulnerabilities2021; @corlettImpactsWarmingTropical2011; @scafaroResponsesLeafRespiration2021], foliar damage during heat waves [@osullivanThermalLimitsLeaf2017; @corlettImpactsWarmingTropical2011], and reduced growth and elevated mortality during drought [@rollinsonClimateSensitivityUnderstory; @breshearsUnderappreciatedPlantVulnerabilities2021; @mcdowellPervasiveShiftsForest2020]. Collectively, these impacts may lead to reduced forest carbon sequestration, as may already be occurring in some forests [@oishiWarmerTemperaturesReduce2018; @sullivanLongtermThermalSensitivity2020]. The resulting feedbacks to the climate system, carbon storage, and changes in albedo and hydrology will in turn have a critical influence on the future trajectory of climate change [@bonan_ecological_2016], yet this influence remains extremely uncertain [@krauseLargeUncertaintyCarbon2018; @friedlingsteinClimateCarbonCycle2006].
+These changes are expected to have profound effects on tree metabolism and forest ecosystem function [@breshearsUnderappreciatedPlantVulnerabilities2021; IPBES report], including altered rates of photosynthesis and respiration [@breshearsUnderappreciatedPlantVulnerabilities2021; @corlettImpactsWarmingTropical2011; @scafaroResponsesLeafRespiration2021], foliar damage during heat waves [@osullivanThermalLimitsLeaf2017; @corlettImpactsWarmingTropical2011], and reduced growth and elevated mortality during drought [@rollinsonClimateSensitivityUnderstory2020; @breshearsUnderappreciatedPlantVulnerabilities2021; @mcdowellPervasiveShiftsForest2020]. Collectively, these impacts may lead to reduced forest carbon sequestration, as may already be occurring in some forests [@oishiWarmerTemperaturesReduce2018; @sullivanLongtermThermalSensitivity2020]. The resulting feedbacks to the climate system, carbon storage, and changes in albedo and hydrology will in turn have a critical influence on the future trajectory of climate change [@bonan_ecological_2016], yet this influence remains extremely uncertain [@krauseLargeUncertaintyCarbon2018; @friedlingsteinClimateCarbonCycle2006].
  
 **Rising temperatures are likely to have differential impacts on trees of different size and canopy position, in large part because small understory trees exist in a microenvironment that is substantially buffered by more exposed canopy trees [@zellweger_seasonal_2019; @davisMicroclimaticBufferingForests2019].**
 Forests are vertically and horizontally stratified, containg trees of different sizes along various successional stages. 
@@ -242,7 +242,7 @@ It has been established that independent of the light environment, traits also v
 ```
 ---
 nocite: |
-@mau_temperate_2018; @cobleLightDrivesVertical2014; @sackHowStrongIntracanopy2006; @chinLeafAcclimationLight2017; @wykaResponsesLeafStructure2012; @athertonSpatialVariationLeaf2017; @kenzoHeightrelatedChangesLeaf2015; @kusiPlasticLeafMorphology2020; @dangProfilesPhotosyntheticallyActive1997;@gebauerEffectsProlongedDrought2015; @marencoLeafTraitPlasticity2017; @kafutiFoliarWoodTraits2020; @vanwittenbergheVariabilityStomatalConductance2012; @zhang_photosynthetic_2012; @weerasingheCanopyPositionAffects2014; @oldhamHydrostaticGradientNot2010; @ichieEcologicalDistributionLeaf2016; @gregoriouEffectsReducedIrradiance2007; @levizouNondestructiveAssessmentLeaf2005; @liakouraTrichomeDensityIts1997; @fauset_differences_2018; @niinemetsAcclimationHighIrradiance1998; Ishida et al. 1999; @millenLeafAngleAdaptive1979; @smithShootStructuralEffects1988; @hadleyInfluenceKrummholzMat1987; @panditharathnaChangeLeafStructure2008; @baltzerLeafOpticalResponses2005; @dietzVerticalPatternsDuration2007; @cobleHowVerticalPatterns2016a; @scartazzaInvestigatingEuropeanBeech2016; @duursmaVerticalCanopyGradients2006; @harleyEffectsLightTemperature1996; @hernandezSimilarTemperatureDependence2020; @turnbullScalingFoliarRespiration2003; @chenLeafEconomicsSpectrum2020; @vandewegPhotosyntheticParametersDark2012; @cavaleri_foliar_2008; @konigerXanthophyllCyclePigmentsPhotosynthetic1995;@matsubaraSunshadePatternsLeaf2009; @harrisChangesLeafProperties2013; @hansenVariationPigmentComposition2002a; @poorterLeafOpticalProperties1995; @cobleHowVerticalPatterns2016; @niinemetsCanopyGradientsLeaf2004; @poorterLeafOpticalProperties2000; @taylorNewFieldInstrument2021
+@mau_temperate_2018; @cobleLightDrivesVertical2014; @sackHowStrongIntracanopy2006; @chinLeafAcclimationLight2017; @wykaResponsesLeafStructure2012; @athertonSpatialVariationLeaf2017; @kenzoHeightrelatedChangesLeaf2015; @kusiPlasticLeafMorphology2020; @dangProfilesPhotosyntheticallyActive1997;@gebauerEffectsProlongedDrought2015; @marencoLeafTraitPlasticity2017; @kafutiFoliarWoodTraits2020; @vanwittenbergheVariabilityStomatalConductance2012; @zhang_photosynthetic_2012; @weerasingheCanopyPositionAffects2014; @oldhamHydrostaticGradientNot2010; @ichieEcologicalDistributionLeaf2016; @gregoriouEffectsReducedIrradiance2007; @levizouNondestructiveAssessmentLeaf2005; @liakouraTrichomeDensityIts1997; @fauset_differences_2018; @niinemetsAcclimationHighIrradiance1998; Ishida et al. 1999; @millenLeafAngleAdaptive1979; @smithShootStructuralEffects1988; @hadleyInfluenceKrummholzMat1987; @panditharathnaChangeLeafStructure2008; @baltzerLeafOpticalResponses2005; @dietzVerticalPatternsDuration2007; @cobleHowVerticalPatterns2016a; @scartazzaInvestigatingEuropeanBeech2016; @duursmaVerticalCanopyGradients2006; @harleyEffectsLightTemperature1996; @hernandezSimilarTemperatureDependence2020; @turnbullScalingFoliarRespiration2003; @chenLeafEconomicsSpectrum2020; @vandewegPhotosyntheticParametersDark2012; @cavaleri_foliar_2008; @konigerXanthophyllCyclePigmentsPhotosynthetic1995;@matsubaraSunshadePatternsLeaf2009; @harrisChangesLeafProperties2013; @hansenVariationPigmentComposition2002a; @poorterLeafOpticalProperties1995; @cobleHowVerticalPatterns2016; @niinemetsCanopyGradientsLeaf2004; @poorterLeafOpticalProperties2000; @taylorNewFieldInstrument2021; @harleyEnvironmentalControlsIsoprene1997; @niinemetsHowLightTemperature2015; @sharkeyFutureIsopreneEmission2014b; @sharkeyFutureIsopreneEmission2014; @simpragaVerticalCanopyGradient2013
 ---
 
 
@@ -280,7 +280,7 @@ However, as we detail below, few studies have evaluated temperature responses of
 # refs in this table need to go in the nocite field below (easiest in alphabetical order)
 ```
 ---
-nocite: | @kafutiFoliarWoodTraits2020; @vanwittenbergheVariabilityStomatalConductance2012a; @roberts_stomatal_1990; @dangProfilesPhotosyntheticallyActive1997; @marencoLeafTraitPlasticity2017; @ambroseEffectsHeightTreetop2010; @zweifelMiddayStomatalClosure2002; @slot_photosynthetic_2019; @hernandezSimilarTemperatureDependence2020; @urbanInductionPhotosynthesisImportance2007; @carterWithinCanopyExperimentalLeaf2018a; @martin_boundary_1999; @mau_temperate_2018; @kosugiSeasonalFluctuationsTemperature2006; @niinemetsVariabilityLeafMorphology2015; @bachofenLightVPDGradients2020; @hamerlynckPhotosyntheticStomatalResponses1996a; @cobleHowVerticalPatterns2016; @wykaResponsesLeafStructure2012; @rijkersEffectTreeHeight2000a; Ishida et al. 1999; @weerasingheCanopyPositionAffects2014; @scartazzaInvestigatingEuropeanBeech2016; @millerOnlySunlitLeaves2021; @harrisChangesLeafProperties2013; @legnerWithincanopyVariationPhotosynthetic2014; @kitaoCanopyNitrogenDistribution2018; @fauset_differences_2018; @rey-sanchez_spatial_2016; @mullerEvidenceEfficientNonevaporative2021; @curtis_intracanopy_2019; @meirLeafRespirationTwo2001; @turnbullScalingFoliarRespiration2003; @arakiVerticalSeasonalVariations2017; @bolstad_foliar_1999; @kenzoHeightrelatedChangesLeaf2015; @harleyEffectsLightTemperature1996;@xuSeasonalVariationTemperature2006; @harleyEnvironmentalControlsIsoprene1997; @niinemetsHowLightTemperature2015; @sharkeyFutureIsopreneEmission2014b; @sharkeyFutureIsopreneEmission2014; @simpragaVerticalCanopyGradient2013; @athertonSpatialVariationLeaf2017
+nocite: | @kafutiFoliarWoodTraits2020; @vanwittenbergheVariabilityStomatalConductance2012a; @roberts_stomatal_1990; @dangProfilesPhotosyntheticallyActive1997; @marencoLeafTraitPlasticity2017; @ambroseEffectsHeightTreetop2010; @zweifelMiddayStomatalClosure2002; @slot_photosynthetic_2019; @hernandezSimilarTemperatureDependence2020; @urbanInductionPhotosynthesisImportance2007; @carterWithinCanopyExperimentalLeaf2018a; @martin_boundary_1999; @mau_temperate_2018; @kosugiSeasonalFluctuationsTemperature2006; @niinemetsVariabilityLeafMorphology2015; @bachofenLightVPDGradients2020; @hamerlynckPhotosyntheticStomatalResponses1996a; @cobleHowVerticalPatterns2016; @wykaResponsesLeafStructure2012; @rijkersEffectTreeHeight2000a; Ishida et al. 1999; @weerasingheCanopyPositionAffects2014; @scartazzaInvestigatingEuropeanBeech2016; @millerOnlySunlitLeaves2021; @harrisChangesLeafProperties2013; @legnerWithincanopyVariationPhotosynthetic2014; @kitaoCanopyNitrogenDistribution2018; @fauset_differences_2018; @rey-sanchez_spatial_2016; @mullerEvidenceEfficientNonevaporative2021; @curtis_intracanopy_2019; @meirLeafRespirationTwo2001; @turnbullScalingFoliarRespiration2003; @arakiVerticalSeasonalVariations2017; @bolstad_foliar_1999; @kenzoHeightrelatedChangesLeaf2015; @harleyEffectsLightTemperature1996;@xuSeasonalVariationTemperature2006;@athertonSpatialVariationLeaf2017
 ---
 
 
@@ -342,13 +342,13 @@ There are, however, exceptions to the pattern of greater growth reductions under
 In eight mesic forests across the northeast United States, tree-ring records showed steep growth declines of understory trees at higher $T_{air}$, contrasting with the responses of canopy trees [Fig `r fig_treerings`, @rollinsonClimateSensitivityUnderstory2021].
 Potential mechanisms for these patterns include stifling of understory $\lambda E$ under low wind, humid conditions, resulting in above-optimal $T_{leaf}$ (Fig. 3) and lower photosynthesis. Furthermore, warming-induced increases in nighttime respiratory carbon loss may be particularly disadvantageous for understory trees that are operating closer to their light-compensation point than canopy trees. Additional research is required to understand these mechanisms and to disentangle tree growth responses to hot-wet versus hot-dry conditions. 
 
-![**Figure `r fig_treerings`. Examples of tree-ring analyses showing differential interannual temperature sensitivity of annual growth between large canopy versus smaller understory trees. In column (a), large trees have a more negative response to high temperatures during the current or previous growing season. Shown are tree ring width (RW) responses to the most influential temperature variable at the site ($T_{max}$ or PET) of the largest versus smallest trees included in GLS model with a DBH x temperature interaction (Anderson-Teixeira et al., in review). In column (b), understory trees have more negative responses to high growing season temperatures across eight New England forests, (@rollinsonClimateSensitivityUnderstory2021). 
-[ISSUE # 29](https://github.com/EcoClimLab/vertical-thermal-review/issues/29).](tree_rings/Figure_4_tree_rings.png)
+![**Figure `r fig_treerings`. Examples of tree-ring analyses showing differential interannual temperature sensitivity of annual growth between large canopy versus smaller understory trees.** In column (a), across three sites and species, trees with large diameter breast height (DBH) had more negative growth responses to high temperatures during the current or previous growing season (denoted by c or p, respectively, on the x axes) than did small trees of the same species. Shown are tree ring width responses to the most influential temperature variable at the site ($T_{max}$ or PET) for the maximum and minimum tails of the DBH distribution included in the analysis.  Colored lines represent responses to the temperature variable in a model including a DBH - temperature interaction. Other model terms are held constant at their mean. Transparent ribbons indicate 95% confidence intervals. Vertical grey lines and shading indicate the long-term mean $\pm$ 1 standard deviation of the temperature variable. From Anderson-Teixeira et al. (in revision). In column (b), understory trees of four species had more negative growth responses to high growing season temperatures across eight New England forests. Growth is expressed as relativized basal area increment (BAI), where values > and < 100% indicate higher- or lower- than-average growth, respectively. Again, colored lines indicate modeled mean temperature responses and transparent ribbons indicate 95% confidence intervals. From @rollinsonClimateSensitivityUnderstory2020. ](tree_rings/Figure_4_tree_rings.png)
+
 
 ### C and water flux
 
 **Canopy trees account for the majority of forest ecosystem water and carbon cycling.**
-While studies partitioning transpiration across forest vertical gradients are rare, both ET and transpiration have been shown to increase with height in a *Picea abies* forest in Germany, such that the upper half of the canopy contributed an estimated 80% of daytime ET [@staudtVerticalStructureEvapotranspiration2011]. Similarly, in a tropical forest in the Brazilian Amazon, canopy and subcanopy trees jointly contributed approximately 93% of ET, or 88% of transpiration (Fig 5a). In terms of C cycling, it has been estimated that canopy strata contribute $\geq$ 64% of net daytime CO~2~ uptake [i.e., GPP - ecosystem respiration, including from soil; @missonPartitioningForestCarbon2007]. Large trees also dominate in terms of woody aboveground net primary productivity ($ANPP_{woody}$) and mortality ($M_{woody}$), with trees $\geq$ 10cm DBH usually contributing > 85% of ANPPwoody and Mwoody across 25 globally distributed forests (Fig. 5b, Piponiot et al., accepted). 
+While studies partitioning transpiration across forest vertical gradients are rare, both ET and transpiration have been shown to increase with height in a *Picea abies* forest in Germany, such that the upper half of the canopy contributed an estimated 80% of daytime ET [@staudtVerticalStructureEvapotranspiration2011]. Similarly, in a tropical forest in the Brazilian Amazon, canopy and subcanopy trees jointly contributed approximately 93% of ET, or 88% of transpiration (Fig 5a; Kunert et al. 2017), and trees >33 cm DBH contributed >80% of transpiration in a forest in Costa Rica [@mooreUpscalingTranspirationDiverse2018]. In terms of C cycling, it has been estimated that canopy strata contribute $\geq$ 64% of net daytime ~CO~2~ uptake [i.e., GPP - ecosystem respiration, including from soil; @missonPartitioningForestCarbon2007]. Large trees also dominate in terms of woody aboveground net primary productivity ($ANPP_{woody}$) and mortality ($M_{woody}$), with trees $\geq$ 10cm DBH usually contributing > 85% of ANPPwoody and Mwoody across 25 globally distributed forests (Fig. 5b, Piponiot et al., accepted). 
 
 ![**Figure 5.** Vertical partitioning of (a) evapotranspiration and (b) C fluxes in tropical forests. Panel (a) is from (Kunert et al. 2017). I'd like to create a parallel figure for C fluxes.](schematics/ecosystem vertical partitioning/ecosystem partitioning_updated.png)
 
@@ -367,7 +367,7 @@ The complex interwoven relations between the biophysical environment and biologi
 
 Canopies are crucial to microclimatic functioning, as they buffer several aspects of forest microenvironments [Zelleweger et al. 2019]. This buffering is influenced by the hydraulogical-cycle at large [Davis et al. 2019], therefore severe droughts place canopies at risk, particularly as larger trees suffer more during droughts[Bennett et al. 2015]. Further, increasing global temperatures show that canopies of temperate and tropical forests are already functioning close to thermal threshold and beyond photosynthetic optimas [@mau_temperate_2018; @huangAirTemperatureOptima2019]. This can have implications in the tropics, where thermal limits are narrower than in temperate forests [Perez and Feeley, 2018]. 
 
-Canopy structure affects understory species composition and soil fertility, which has been shown to shift under macroclimatic warming and canopy disturbance [@majasalmiImpactTreeCanopy2020; @bertrandCommentForestMicroclimate2020; @maesPlantFunctionalTrait2020]. Macroclimatic warming will disproportionately affect the less warm-adapted functional types within the forest canopy, even with buffering of climatic extremes, thereby creating holes in the canopy that will take a long time to refill (especially in slow-growing tropical sub-canopy specialists), with associated understory plant thermophilization (death is faster than recruitment and growth) [@duqueThermophilizationAdultJuvenile2015; @zellweger_seasonal_2019; @defrenneMicroclimateModeratesPlant2013]. This imposes an increasing threat to the biodiversity in microrefugias that are  otherwise buffered from extremes [@scheffersMicrohabitatsReduceAnimal2013].
+Canopy structure affects understory species composition and soil fertility, which has been shown to shift under macroclimatic warming and canopy disturbance [@majasalmiImpactTreeCanopy2020; @bertrandCommentForestMicroclimate2020; @maesPlantFunctionalTrait2020]. Macroclimatic warming will disproportionately affect the less warm-adapted functional types within the forest canopy, even with buffering of climatic extremes, thereby creating holes in the canopy that will take a long time to refill (especially in slow-growing tropical sub-canopy specialists), with associated understory plant thermophilization (death is faster than recruitment and growth) [@duqueThermophilizationAdultJuvenile2015; @zellweger_seasonal_2019; @defrenneMicroclimateModeratesPlant2013; @greiserHidingClimateCharacterizing2019]. This imposes an increasing threat to the biodiversity in microrefugias that are  otherwise buffered from extremes [@scheffersMicrohabitatsReduceAnimal2013].
 
 ### warming
 
